fixtures/oci1/invalid/bad-file-hash/obt.jws
eyJhbGciOiJFZERTQSIsInR5cCI6IkpXUyIsImtpZCI6ImZpeHR1cmUtZWQyNTUxOSJ9.eyJpZCI6InRlc3QtZml4dHVyZS0wLjEuMCIsImRvbWFpbiI6InRlc3QtZml4dHVyZSIsInZlcnNpb24iOiIwLjEuMCIsInByb3ZpZGVySWQiOiJvbnRvbG9neTpwYWN0LWZpeHR1cmVzIiwidHJ1c3RUaWVyIjoiVGllcjEiLCJwb2xpY3lTbmFwc2hvdElkIjoic2hhMjU2OmFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWEiLCJmaWxlcyI6eyJjb250ZXh0Ijoic2hhMjU2OmFiMGYyZDNjYjc2YzkyYmE0MzYzYzRjMjYyYjU1ZDY5ZmU2N2QwMjgzMjcxZjdhMTI1M2MyNmY1OTJmYTAxNWMiLCJ2b2NhYiI6InNoYTI1NjowMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwIn0sInByZWNlZGVuY2UiOltdLCJkZW55V2lucyI6dHJ1ZSwibmJmIjoiMjAyNi0wMy0wMlQwMDowMDowMFoiLCJleHAiOiIyMDMwLTAzLTAyVDAwOjAwOjAwWiIsInJldkVwb2NoIjoxfQ.NsVqB4C01jivCzOqV4WET2hjF6M82DYrSXXz9ckPJ8ruNdwjQ4TqNhqbFseuMlgE6ZoAAPNUnOyQv_RcTE70AQ
